# asi-group-15-01

./: .env.example  .gitignore  Dockerfile.api  Dockerfile.ui  README.md  docker-compose.yml  environment.yml  pyproject.toml
conf/base/: catalog.yml  parameters.yml
data/01_raw/: sample.csv
docs/: modelcard.md
src/api/: config.py  main.py
src/asi_group_15_01/pipelines/data_science/: nodes.py  pipeline.py
src/ui/: app.py
tests/api/: api_tests.py
tests/pipelines/data_science/: test_pipeline.py
